Get environment values working
